syntax = "proto3";
package auth.v1;
option go_package="coolcar/auth/api/gen/v1;authpb";


message LoginRequest{
  string code = 1;

}
message LoginResponse{
  string access_token = 1;//自定义状态
  int32 expires_in = 2;//过期时间

}
service  AuthService{
  rpc Login (LoginRequest) returns (LoginResponse);
}