syntax = "proto3";
package rental.v1;
option go_package="coolcar/rental/api/gen/v1;rentalpb";

message Location{
  double latitude = 1;
  double longitude = 2;
}
//行程状态
message LocationStatus{
  Location location = 1;
  int32 fee_cent = 2;
  double km_driven = 3;
  string poi_name = 4;
  int64 timestamp_sec = 5;
}
enum TripStatus{
  TS_NOT_SPECIFIED = 0;
  IN_PROGRESS = 1;
  FINISHED = 2;
}
//Trip实体
message TripEntity{
  string id = 1;
  Trip trip = 2;
}
//Trip数据
message Trip{
  string account_id = 1;
  string car_id = 2;
  LocationStatus start = 3;
  LocationStatus end = 4;
  LocationStatus current = 5;
  TripStatus tripStatus = 6;
  string identity_id = 7;
}

message CreateTripRequest{
  Location start = 1;
  string car_id = 2;
}
message CreateTripResponse{
  TripEntity trip = 1;
}
message GetTripRequest{
  string id = 1;
  string tid =2;
  string aid = 3;
}
message GetTripsRequest{
  TripStatus tripStatus = 1;
}
message GetTripsResponse{
  repeated TripEntity trips =1;
}
message UpdateTripRequest{
  string id = 1;
  Location current = 2;//当前地点
  bool end_trip = 3;//结束行程
}
service  TripService{
  //通过trip数据返回一个trip实体
  rpc CreateTrip (CreateTripRequest) returns (TripEntity);
  //读
  rpc GetTrip(GetTripRequest)returns(Trip);
  rpc GetTrips(GetTripsRequest) returns(GetTripsResponse);//批量
  //更新
  rpc UpdateTrip(UpdateTripRequest)returns(Trip);
}


//profile service
enum IdentityStatus{
  UNSUBMITTED = 0;
  PENDING= 1;
  VERIFIED = 2;
}
message Identity{
  string lic_number = 1;
  string  name = 2;
  string gender = 3;
  int64 birth_date_millis = 4;
}
message Profile{
  Identity identity = 1;
  IdentityStatus identity_status = 2;
}

message GetProfileRequest{

}
message ClearProfileRequest{

}
service ProfileService{
  rpc GetProfile (GetProfileRequest) returns (Profile);
  rpc SubmitProfile(Identity) returns (Profile);
  rpc ClearProfile(ClearProfileRequest) returns (Profile);
}